<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MP08_UF2_NF1.2_04</string>
    <string name="hello_world">Hello world!</string>
    <string name="employee_icon_alt">Employee Icon</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="charge">Charge</string>
    <string name="department">Department</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone Number</string>
    <!-- LABELS DETAIL VIEW -->
    <string name="id_label">ID :</string>
    <string name="name_label">Name :</string>
    <string name="charge_label">Charge :</string>
    <string name="department_label">Department :</string>
    <string name="phone_label">Phone :</string>
    <string name="email_label">E-mail :</string>
    <string name="menu_new_employee">Add new Employee</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_employee_create">Add new Employee</string>
    <!-- REMOVE EMPLOYEE -->
    <string name="removed_successfully"> has been removed successfully.</string>
    <string name="remove_employee">Remove Employee</string>
    <string name="remove">Remove</string>
    <string name="remove_confirm_message">Are you sure you want to remove </string>

    <!-- ADD EMPLOYEE VIEW -->
    <string name="add_employee">Add Employee</string>
    <string name="cancel">Cancel</string>
    <string name="added_employee">Added Employee</string>
    <string name="added_employee_msg">was added successfully.</string>
    <string name="ok">OK</string>
    
    <string name="update_employee">Update Employee</string>
    <string name="save">Save</string>
    <string name="title_activity_employee_update">Update Employee</string>
    <string name="update">Update</string>
    <string name="upated_successfully">Employee has been updated successfully.</string>
    <string name="updated_fail">Updating process failed.</string>

</resources>